fix: Center align items in body and set header width to 100%

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
+    width: 100vw;
 }
 
 header {
@@ -10,6 +11,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: gray; /* this is a placeholder color*/
+    width: 100%;
 }
 
 h1 {
